--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,11 @@
+[[plugins]]
+package = "netlify-plugin-cache"
+
+  [plugins.inputs]
+  paths = [
+    ".cache"
+  ]
+
 [build]
   publish = "_site/"
   command = "npm run build"
