--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "slugify": "^1.6.6",
     "string-strip-html": "^8.5.0",
     "terser": "^5.19.2"
+  },
+  "devDependencies": {
+    "netlify-plugin-cache": "^1.0.3"
   }
 }
